Filter reservations by status and use cornjob to check every reservation ended every 5 minitues